Fixed overflowing text on results

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -247,7 +247,7 @@ p.result-p.truncate {
 }
 
 #resultsDiv {
-  width: 112%;
+  width: 100%;
 }
 
 .buttonHolder {
